<resources>
    <string name="app_name">My Edu</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="helper_name">Name is required</string>
    <string name="helper_email">E-mail is required</string>
    <string name="helper_password">Password is required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <font color='#6C419A'>Sign up</font></string>
    <string name="already_have_an_account_log_in">Already have an account? <font color='#6C419A'>Log in</font></string>
    <string name="error_name">Invalid Name</string>
    <string name="error_email">Invalid E-mail address</string>
    <string name="error_password">Weak Password</string>
    <string name="login_successful">Login Successful</string>
    <string name="password_recovery">Password recovery e-mail sent</string>
    <string name="home">Home</string>
    <string name="my_courses">My courses</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="popular_courses">Popular courses</string>
    <string name="share">Share</string>
    <string name="about_the_course">About the course</string>
    <string name="image_pick_title">Pick your profile picture</string>
    <string name="camera_title">Change Profile picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="camera_permission_denied">Camera permission denied.</string>
    <string name="invalid_password">Password required</string>
    <string name="update">Update</string>
    <string name="profile_updated">Profile updated</string>
    <string name="profile_update_failed">Profile update failed</string>
    <string name="favourite_course">Favourite Course</string>
    <string name="course_detail">Course Detail</string>
    <string name="start_course">Start Course</string>
    <string name="resume_course">Resume Course</string>
    <string name="my_course">My Course</string>
</resources>