<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/courseBanner"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/courseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/courseBanner"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/btnShare"
        android:ellipsize="end"
        android:maxLines="2"
        android:padding="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instructorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/courseTitle"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/open_sans_bold"
        android:padding="16dp"
        android:textColor="@color/brand_dark" />

    <Button
        android:id="@+id/btnShare"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/courseBanner"
        android:layout_alignParentEnd="true"
        android:text="@string/share"
        android:textAllCaps="false"
        app:icon="@drawable/ic_share" />

    <Button
        android:id="@+id/btnStart"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructorName"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start_course"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/txtAboutTheCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructorName"
        android:padding="16dp"
        android:text="@string/about_the_course"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/courseHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAboutTheCourse"
        android:padding="16dp"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/favorite"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_below="@id/btnStart"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:button="@drawable/favourite"
        android:buttonTint="@color/brand_dark"
        android:checked="false"
        android:padding="8dp" />

</RelativeLayout>